# RUCKUS-vSZ-MCP

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  LICENSE  OPEN_WEBUI_QUICKSTART.md  README.md  SECURITY_QUICKSTART.md  config.example.yaml  pyproject.toml  requirements.txt
deploy/: .env.example  Dockerfile  README.md  docker-compose.yml
examples/: 01_list_zones.md  01_system_overview.md  02_create_guest_wlan.md  02_zone_management.md  03_monitor_access_points.md  03_wlan_operations.md  04_ap_management.md  04_client_management.md  05_alarm_management.md  05_client_tracking.md  06_alarm_monitoring.md  06_wlan_management.md  README.md
ruckus_vsz_server/: __init__.py  api_client.py  config.py  controller_manager.py  main.py  response_formatters.py  security.py  tool_definitions.py  tools.py
ruckus_vsz_server/modules/: __init__.py  access_points.py  alarms.py  authentication.py  clients.py  monitoring.py  network.py  switches.py  system.py  wlans.py  zones.py
